--- a/.github/workflows/db_access.yml
+++ b/.github/workflows/db_access.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-          python /Programacion/config.py
+          python /Programacion/db_access_config.py
